# StringSso

./: CMakeLists.txt  README.md  run_tests.sh
src/: basic_string.hpp  char_traits.hpp  char_traits_specialization.hpp  details.hpp  string.hpp
tests/: .clang-format  .clang-tidy  CMakeLists.txt
tests/sso/: CMakeLists.txt  tests.cpp
tests/sso/cases/: basic_tests.hpp  sso.hpp
